# cospan

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  Caddyfile  Caddyfile.prod  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/web/: Dockerfile  package.json
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/api/: actor.ts  client.ts  feed.ts  handle.ts  issue.ts  keys.ts  node.ts  notifications.ts  org.ts  pull.ts  ref-update.ts  release.ts  repo.ts  schema.ts  search.ts  social.ts  vcs.ts  webhook.ts
apps/web/src/lib/auth/: oauth-client.ts  scopes.ts
apps/web/src/lib/components/auth/: LoginButton.svelte  UserMenu.svelte
apps/web/src/lib/components/issue/: IssueCard.svelte
apps/web/src/lib/components/layout/: Header.svelte
apps/web/src/lib/components/pull/: PullCard.svelte
apps/web/src/lib/components/repo/: BranchSchemaRow.svelte  CodeView.svelte  CommitGraph.svelte  CommitList.svelte  CompatibilityBadge.svelte  DependencyGraph.svelte  FileSchemaSidebar.svelte  FileTree.svelte  RepoCard.svelte  RepoTabBar.svelte  SchemaHealthCard.svelte  SchemaSparkline.svelte  StructuralDiff.svelte
apps/web/src/lib/components/settings/: KeyForm.svelte
apps/web/src/lib/components/shared/: BackLink.svelte  Breadcrumb.svelte  EmptyState.svelte  FollowButton.svelte  ForkButton.svelte  KeyboardShortcuts.svelte  LabelBadge.svelte  LabelPicker.svelte  NotificationBell.svelte  ProfileHeader.svelte  RichText.svelte  SearchBar.svelte  StarButton.svelte  StateBadge.svelte  Timeline.svelte
apps/web/src/lib/data/: languages.ts  marked-to-relationaltext.lens.json  relationaltext-to-html.lens.json
apps/web/src/lib/stores/: auth.svelte.ts  events.svelte.ts
apps/web/src/lib/utils/: debounce.ts  time.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
apps/web/src/routes/.well-known/[...path]/: +server.ts
apps/web/src/routes/[did]/: +page.server.ts  +page.svelte
apps/web/src/routes/[did]/(profile)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
apps/web/src/routes/feed/: +page.server.ts  +page.svelte
apps/web/src/routes/import/: +page.server.ts  +page.svelte
apps/web/src/routes/new/: +page.svelte
apps/web/src/routes/notifications/: +page.svelte
apps/web/src/routes/orgs/: +page.server.ts  +page.svelte
apps/web/src/routes/search/: +page.server.ts  +page.svelte
apps/web/src/routes/settings/: +page.svelte
crates/cospan-appview/: Cargo.toml  Dockerfile
crates/cospan-appview/migrations/: 20260326000001_create_infrastructure.sql  20260326000002_create_nodes.sql  20260326000003_create_actor_profiles.sql  20260326000004_create_repos.sql  20260326000005_create_ref_updates.sql  20260326000006_create_issues.sql  20260326000007_create_pulls.sql  20260326000008_create_social.sql  20260326000009_create_orgs.sql  20260326000010_create_pipelines.sql  20260408000001_create_fork_jobs.sql
crates/cospan-appview/src/: at_uri.rs  cache.rs  config.rs  error.rs  git_copy.rs  interop.rs  lib.rs  main.rs  node_proxy.rs  record_parser.rs  state.rs
crates/cospan-appview/src/auth/: did_resolver.rs  dpop.rs  mod.rs  oauth.rs  pds_client.rs  scope.rs  session.rs
crates/cospan-appview/src/db/: actor_profile.rs  collaborator.rs  cursor.rs  dependency.rs  follow.rs  fork_job.rs  issue.rs  issue_comment.rs  issue_state.rs  label.rs  mod.rs  node.rs  org.rs  org_member.rs  pipeline.rs  pull.rs  pull_comment.rs  pull_state.rs  reaction.rs  ref_update.rs  repo.rs  star.rs
crates/cospan-appview/src/indexer/: consumer.rs  dispatch.rs  jetstream.rs  knot_consumer.rs  mod.rs  pds_backfill.rs  tap.rs
crates/cospan-appview/src/middleware/: auth.rs
crates/cospan-appview/src/xrpc/: actor_get_profile.rs  collaborator_add.rs  collaborator_list.rs  dependency_list.rs  feed_breaking.rs  feed_timeline.rs  follow_list.rs  follow_toggle.rs  issue_comment_create.rs  issue_comment_list.rs  issue_create.rs  issue_get.rs  issue_list.rs  issue_state_change.rs  issue_timeline.rs  label_create.rs  mod.rs  node_list.rs  node_proxy.rs  org_get.rs  org_list.rs  org_member_list.rs  pipeline_get.rs  pipeline_list.rs  profile_put.rs  pull_comment_list.rs  pull_get.rs  pull_list.rs  push_token.rs  reaction_list.rs  ref_update_list.rs  repo_create.rs  repo_delete.rs  repo_fork.rs  repo_get.rs  repo_import.rs  repo_list.rs  search_repos.rs  search_structural.rs  sse.rs  (+2 more)
crates/cospan-appview/tests/: test_db.rs  test_fork_e2e.rs  test_xrpc.rs
crates/cospan-appview/tests/support/: mod.rs  test_node.rs  test_pds.rs
crates/cospan-codegen/: Cargo.toml
crates/cospan-codegen/src/: db_projection.rs  emit_rows.rs  emit_scopes.rs  emit_sql.rs  emit_typescript_views.rs  emit_xrpc.rs  lens_config.rs  lib.rs  main.rs  morphism.rs  record_config.rs  tangled_interop.rs  util.rs
crates/cospan-codegen/tests/: test_codegen.rs
crates/cospan-node/: Cargo.toml  Dockerfile
crates/cospan-node/examples/: measure_cospan_import.rs
crates/cospan-node/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/cospan-node/src/auth/: authz.rs  did_auth.rs  mod.rs  push_auth.rs
crates/cospan-node/src/git_compat/: info_refs.rs  mod.rs  receive_pack.rs  upload_pack.rs
crates/cospan-node/src/handlers/: compare_branch_schemas.rs  diff_commits.rs  get_blob.rs  get_commit_schema_stats.rs  get_dependency_graph.rs  get_file_schema.rs  get_head.rs  get_import_status.rs  get_object.rs  get_project_schema.rs  get_ref.rs  get_repo_info.rs  list_commits.rs  list_refs.rs  list_tree.rs  mod.rs  negotiate.rs  put_object.rs  set_ref.rs  structural.rs
crates/cospan-node/src/parsing/: mod.rs
crates/cospan-node/src/pds_client/: client.rs  mod.rs
crates/cospan-node/src/store/: mod.rs  repo_store.rs
crates/cospan-node/src/validation/: mod.rs
crates/cospan-node/tests/: test_handlers.rs
scripts/: deploy.sh  fetch-tangled-lexicons.sh  init-tap-db.sh  migrate-to-v0.29.sh  test-db.sh
(+53 files in other folders)
