[workspace]
members = [
    "crates/cospan-node",
    "crates/cospan-appview",
    "crates/cospan-codegen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cospan-dev/cospan"

[workspace.dependencies]
# panproto — all from git because panproto-grammars needs vendored C sources
# (too large for crates.io). All crates must come from the same source to avoid
# type mismatches between git and crates.io versions of panproto-schema etc.
panproto-core = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-vcs = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-schema = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-check = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-lens = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-protocols = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-io = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-inst = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-gat = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-mig = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-expr = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-expr-parser = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-xrpc = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-parse = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2", features = ["group-all"] }
panproto-git = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
panproto-project = { git = "https://github.com/panproto/panproto.git", tag = "v0.17.2" }
git2 = "0.20"

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "json", "chrono"] }

# Crypto / identity
blake3 = "1"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
elliptic-curve = { version = "0.13", features = ["jwk"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Cache
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Tree-sitter (provided transitively via panproto-grammars)
tree-sitter = "0.25"

# General
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dotenvy = "0.15"
async-trait = "0.1"
anyhow = "1"
dirs = "6"

# Testing
mockall = "0.13"
