[workspace]
members = [
    "crates/cospan-node",
    "crates/cospan-appview",
    "crates/cospan-codegen",
]
resolver = "2"

[workspace.package]
version = "0.6.3"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cospan-dev/cospan"

[workspace.dependencies]
# panproto — path dependencies to local phrom checkout for development.
# Switch to git tags or crates.io versions for release builds.
panproto-core = { path = "/Users/awhite48/Projects/phrom/crates/panproto-core" }
panproto-vcs = { path = "/Users/awhite48/Projects/phrom/crates/panproto-vcs" }
panproto-schema = { path = "/Users/awhite48/Projects/phrom/crates/panproto-schema" }
panproto-check = { path = "/Users/awhite48/Projects/phrom/crates/panproto-check" }
panproto-lens = { path = "/Users/awhite48/Projects/phrom/crates/panproto-lens" }
panproto-lens-dsl = { path = "/Users/awhite48/Projects/phrom/crates/panproto-lens-dsl" }
panproto-protocols = { path = "/Users/awhite48/Projects/phrom/crates/panproto-protocols" }
panproto-io = { path = "/Users/awhite48/Projects/phrom/crates/panproto-io" }
panproto-inst = { path = "/Users/awhite48/Projects/phrom/crates/panproto-inst" }
panproto-gat = { path = "/Users/awhite48/Projects/phrom/crates/panproto-gat" }
panproto-mig = { path = "/Users/awhite48/Projects/phrom/crates/panproto-mig" }
panproto-expr = { path = "/Users/awhite48/Projects/phrom/crates/panproto-expr" }
panproto-expr-parser = { path = "/Users/awhite48/Projects/phrom/crates/panproto-expr-parser" }
panproto-xrpc = { path = "/Users/awhite48/Projects/phrom/crates/panproto-xrpc" }
panproto-parse = { path = "/Users/awhite48/Projects/phrom/crates/panproto-parse", features = ["group-all"] }
panproto-git = { path = "/Users/awhite48/Projects/phrom/crates/panproto-git" }
panproto-project = { path = "/Users/awhite48/Projects/phrom/crates/panproto-project" }
git2 = "0.20"

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "json", "chrono"] }

# Crypto / identity
blake3 = "1"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
elliptic-curve = { version = "0.13", features = ["jwk"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Cache
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Tree-sitter (provided transitively via panproto-grammars)
tree-sitter = "0.25"

# General
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dotenvy = "0.15"
async-trait = "0.1"
anyhow = "1"
dirs = "6"

# Testing
mockall = "0.13"
