[package]
name = "cospan-appview"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cospan_appview"
path = "src/lib.rs"

[[bin]]
name = "cospan-appview"
path = "src/main.rs"

[dependencies]
panproto-core.workspace = true
panproto-inst.workspace = true
panproto-expr.workspace = true
panproto-expr-parser.workspace = true
panproto-gat.workspace = true
panproto-schema.workspace = true
panproto-xrpc.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true

moka.workspace = true
redis.workspace = true

jsonwebtoken.workspace = true
p256.workspace = true
elliptic-curve.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
urlencoding.workspace = true

chrono.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
reqwest.workspace = true
tempfile = "3"
