[package]
name = "cospan-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cospan_codegen"
path = "src/lib.rs"

[[bin]]
name = "cospan-codegen"
path = "src/main.rs"

[dependencies]
panproto-core.workspace = true
panproto-schema.workspace = true
panproto-protocols.workspace = true
panproto-mig.workspace = true
panproto-gat.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
panproto-protocols.workspace = true
