[package]
name = "cospan-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cospan_codegen"
path = "src/lib.rs"

[[bin]]
name = "cospan-codegen"
path = "src/main.rs"

[dependencies]
panproto-schema.workspace = true
panproto-protocols.workspace = true
panproto-mig.workspace = true
panproto-inst.workspace = true
panproto-lens.workspace = true
panproto-expr.workspace = true
panproto-expr-parser.workspace = true
panproto-check.workspace = true
panproto-gat.workspace = true

serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
panproto-protocols.workspace = true
