[package]
name = "cospan-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cospan_node"
path = "src/lib.rs"

[[bin]]
name = "cospan-node"
path = "src/main.rs"

[dependencies]
panproto-core.workspace = true
panproto-schema.workspace = true
panproto-protocols.workspace = true
panproto-check.workspace = true
panproto-lens.workspace = true
panproto-parse.workspace = true
panproto-git.workspace = true
panproto-vcs.workspace = true
panproto-xrpc.workspace = true
panproto-project.workspace = true
git2.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

blake3.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
reqwest.workspace = true
moka.workspace = true
p256.workspace = true
elliptic-curve.workspace = true

chrono.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
dirs.workspace = true
tempfile = "3"

[dev-dependencies]
mockall.workspace = true
reqwest.workspace = true
panproto-core.workspace = true
panproto-schema.workspace = true
panproto-protocols.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tempfile = "3"

[[example]]
name = "measure_cospan_import"
path = "examples/measure_cospan_import.rs"
